# phy204_proj

./: .gitignore  CMakeLists.txt  better.ipynb  main.cpp  main.py  main_iterative.cpp  main_old.cpp  textbook.ipynb
__pycache__/: main.compute_grid-29.py310.1.nbc  main.compute_grid-29.py310.nbi  main.compute_grid-54.py310.1.nbc  main.compute_grid-54.py310.nbi  main.numba_compute-54.py310.1.nbc  main.numba_compute-54.py310.nbi
build-phy204_proj-Desktop_Qt_6_2_4_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  phy204_proj  qtcsettings.cmake
build-phy204_proj-Desktop_Qt_6_2_4_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-841e2f5d5d987cf78f63.json  cmakeFiles-v1-41f01e0036d8f8312d37.json  codemodel-v2-a058dd0b591e8688063c.json  directory-.-Debug-685d158f35e18e0d4413.json  index-2023-04-24T18-44-16-0660.json  target-phy204_proj-Debug-200bf8395005f10bdaad.json  target-phy204_proj_autogen-Debug-654b49f6c7a63b838c67.json  target-phy204_proj_autogen_timestamp_deps-Debug-2102dd60ba34d884e934.json
build-phy204_proj-Desktop_Qt_6_2_4_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-phy204_proj-Desktop_Qt_6_2_4_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QGuiApplication.02EFC12C7B8A04B9.idx  QMetaType.2865B8723C9CAD4E.idx  QQmlApplicationEngine.AC11680432D0D966.idx  align.h.39AE23050B3DB93E.idx  (+134 more)
build-phy204_proj-Desktop_Qt_6_2_4_GCC_64bit-Debug/phy204_proj_autogen/: deps  moc_predefs.h
build-phy204_proj-Desktop_Qt_6_2_4_GCC_64bit-Debug/phy204_proj_autogen/EWIEGA46WW/: qrc_qml.cpp
phy204_proj/: CMakeLists.txt
